src/css/object-table-style.css
.object-table-module .count .records{
	color: rgb(136, 136, 136);
	font-weight: normal;
}
.object-table-module .count{
	font-size: 15px;
	float: right;
	margin-top: 20px;
	color: rgb(33, 101, 163);
	background-color: rgba(188, 188, 188, 0.35);
}

.object-table-module .loading{
	padding: 5px;
	text-align: center;
	color: rgb(51, 122, 185);
}

/*## Search */
.object-table-module .search{
	max-width:250px;
}

/*## Sorting */
.object-table-module .sorting-badge{
	background-color: white;
	position: relative;
	font-weight: 600;
	font-size: 10px;
	padding: 5px 5px 5px 10px;
	display: inline-block;
	border-radius: 4px;
	margin-left: 5px;
	color: rgb(51, 122, 183);
	border: 1px solid rgba(12, 75, 140, 0.43);
	margin-bottom: 3px;
}
.object-table-module .sorting-badge:hover{
	background-color: rgb(51, 122, 183);
	color: white;
}

.object-table-module .sorting-badge .close{
	margin-left: 5px;
	float: right;
	font-size: 12px;
	line-height: 1;
	color: #000;
	filter: alpha(opacity=20);
	opacity: .2;
}

.object-table-module .sorting-badge:hover .close{
	opacity:1;
	cursor: pointer;
	color: rgb(0, 38, 85);
	text-shadow:none;
}

/*sorting icons*/
.object-table-module .sorting-container{
	margin: 10px 0;
}

/*table*/
.object-table{
	margin-bottom: 0px;
	color: gray;
}

.object-table thead>tr{
	background-color: #e6f1f6;
	color: rgb(33, 101, 163);
	cursor: pointer;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.object-table>thead:first-child>tr>th{
	border-bottom: 0;
	padding-right: 25px;
}
.object-table>tbody>tr:hover{
	background-color:rgba(103, 103, 103, 0.08);
	color: black;
	cursor: pointer;
}
.object-table th.sortable{
	position: relative;
}

.object-table th.sortable:before {
	margin-top: 2px;
}

.object-table th.sortable:before,th.sortable:after,
.sorting-badge .up,.sorting-badge .down {
	font-size: 9px;
	font-family: 'Glyphicons Halflings';
	content: "\e113";
	visibility: visible;
	right: 8px;
	top: 40%;
	position: absolute;
	opacity: .25;
	margin-top: -4px;
}

.object-table th.sortable:after,
.sorting-badge .down {
	margin-top: 5px;
	content: "\e114";
}
.sorting-badge .up,.sorting-badge .down{
	margin-top: -2px;
	margin-left: 2px; 
}

.object-table th.sortable:hover:not(.table-sort-up):not(.table-sort-down):after,
.object-table th.sortable:hover:not(.table-sort-up):not(.table-sort-down):before{
	opacity: 1;
}

.object-table th.sortable.table-sort-up:before,.object-table th.sortable.table-sort-down:after{
	opacity: 1;
}
.object-table tr.selected-row td{
	background-color: rgb(215, 241, 160);
}

/*contentEditable*/

.object-table>tbody>tr>td[editable] span:focus{
	padding: 3px;
	margin: -3px;
	border: 2px dotted #738395;
	background-color: #F5F5F5;
	vertical-align: middle;
	color: rgb(12, 75, 140);
	display: block;
	outline: none;
}

/* ANIMATION */
/* loading icon */
.object-table-module .glyphicon-refresh-animate {
	-animation: spin .7s infinite linear;
	-webkit-animation: spin2 .7s infinite linear;
}

@-webkit-keyframes spin2 {
	from { -webkit-transform: rotate(0deg);}
	to { -webkit-transform: rotate(360deg);}
}

@keyframes spin {
	from { transform: scale(1) rotate(0deg);}
	to { transform: scale(1) rotate(360deg);}
}

/* hover column */
.object-table-module.hover-column table{
  overflow: hidden !important;
}

.object-table-module.hover-column table td{
  position: relative;
  outline: 0;
}

.object-table-module.hover-column table td:hover::after{ 
  content: '';  
  height: 10000px;
  left: 0;
  position: absolute;  
  top: -5000px;
  width: 100%;
  z-index: -1;
}

.object-table-module.hover-column table td:hover::after,
.object-table-module.hover-column table th:hover::after {
  background-color: rgba(103, 103, 103, 0.08);
}

